--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     
 }
 body {
     display: flex;
+    background-color: blue;
     
 }
 
 .caixaimagem {
-    width: 50%;
-    height: 100%;
+    width: 500px;
+    height: 700px;
 }
 .imagemcomoda {
     width: 100%;
     height: 100%;
     float: left;
     display: flex;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 
 }
 
@@ -76,4 +80,11 @@ h2 {
     letter-spacing: 0.7px;
     font-size: 16px;
     
+}
+
+.container {
+    margin: 500px 250px;
+    display: flex;
+    background-color: whitesmoke;
+    border-radius: 15px;
 }
