--- a/style.css
+++ b/style.css
@@ -1,92 +1,40 @@
+/******** 1440px ********/
+
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+    margin: 0px;
+    padding: 0px;
+
 }
+
 body {
+    background-color: hsl(210, 46%, 95%);
     display: flex;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    
-}
-
-.caixaimagem {
-    width: 500px;
-    height: 700px;
-}
-.imagemcomoda {
-    width: 100%;
-    height: 100%;
-    float: left;
-    display: flex;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-
-}
-
-main {
-    width: 50%;
-    height: 100%;
-    padding: 50px;
-    font-family: 'Manrope', sans-serif;
-    
-}
-
-h1 {
-    font-size: 31px;
-    color: dimgray;
-    margin-bottom: 1em;
-    font-weight: 700;
-}
-
-h2 {
-    font-size: 20px;
-    color: grey;
-    font-weight: 500;
-    line-height: 1.5em;
-   
-}
-
-.avatarinfo {
-    margin: 2em 0;
-    
-    
-    
-}
-
-.avatarmichelle {
-    border-radius: 50%;
-    height: 70px;
-    width: 70px;
-    float: left;
-    margin-right: 20px;
-    
-}
-
-#nome {
-    margin-bottom: 20px;
-    color: dimgray;
-    font-weight: bold;
-    letter-spacing: 0.7px;
-    margin-top: 2em;
-    padding-top: 17px;
-    
-}
-
-#data {
-    margin-bottom: 20px;
-    color: lightslategrey;
-    font-weight: normal;
-    letter-spacing: 0.7px;
-    font-size: 16px;
-    
-}
-
-.container {
-    margin: 500px 250px;
-    display: flex;
-    background-color: whitesmoke;
-    border-radius: 15px;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    height: 100vh;
+    font-size: 13px;
+}
+
+.body {
+    width: 50%;
+    display: flex;
+    line-height: 20px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.body #mainImg {
+    border-radius: 10px 0px 0px 10px;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 5%;
+    position: relative;
+
 }
