--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body {
     position: absolute;
     top: 50%;
     left: 65%;
+    
 }
 
 .share .shareSvg{
@@ -109,7 +110,7 @@ body {
     height: 20px;
     background-color: hsl(217, 19%, 35%);
     position: absolute;
-    top: 75%;
+    top: 80%;
     left: 35%;
     transform: rotate(0deg) rotate(45deg);
 }
@@ -124,5 +125,81 @@ body {
     border: none;
     cursor: pointer;
     outline: none;
-    color: white
+    color: white;
+    display: none;
+    
+}
+
+.share .buttonCloseOne {
+    display: none;
+}
+
+@media screen and (max-width:376px) {
+    .body{
+        width:85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .body #mainImg{
+        width: 100%;
+        border-bottom: 10px 10px 0 0;
+
+    }
+
+    .text{
+        margin-top: 5%;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .text .person .images img{
+        width: 30px;
+
+    } 
+
+    .text .person .images{
+        width: 48%;
+    }
+    
+    .share{
+        top: 75%;
+        left: 0;
+        width: 94%;
+        height: 49px;
+        border-radius: 0 0 10px 10px;
+        
+    }
+
+    .share .shareSvg{
+        width: 35%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-right: 15%;
+    }
+
+    .share #buttonCloseOne{
+        background-color: hsl(210, 46%, 95%);
+        border-radius: 50px;
+        padding: 8px;
+        margin-right: 4%;
+        display: inline-block;
+        text-decoration: none;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        color: white;
+    }
+
+    .share .triangle{
+        display: none;
+    }
+    
+
 }
