--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
     transform: rotate(0deg) rotate(45deg);
 }
 
-.person #buttonclose{
+.person #buttonClose{
     background-color: hsl(210, 46%, 95%);
     border-radius: 50px;
     padding: 8px;
